[gd_scene load_steps=10 format=3 uid="uid://6sydtvs3apmj"]

[ext_resource type="PackedScene" uid="uid://cg51mm6p3n2q8" path="res://titlecredits/chargingtoast.tscn" id="1_l7t26"]
[ext_resource type="Script" path="res://titlecredits/title.gd" id="1_w4y26"]
[ext_resource type="FontFile" uid="uid://fvllofbwk8wj" path="res://rescources/industrial-decapitalist-font/IndustrialDecapitalist-G3OA.ttf" id="2_1w5fl"]
[ext_resource type="PackedScene" uid="uid://02kbtqgorbow" path="res://render/render.tscn" id="2_625pm"]
[ext_resource type="Shader" path="res://render/effects.gdshader" id="3_aygtk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hwndt"]
shader = ExtResource("3_aygtk")
shader_parameter/lineCount = 70
shader_parameter/darknessMult = 0.05
shader_parameter/timeSpeed = 6.5
shader_parameter/wave_amount = 0.0
shader_parameter/warp_amount = 1.05
shader_parameter/corner_push = 0.054
shader_parameter/color_bleeding = 0.05
shader_parameter/red_offset = 0.001
shader_parameter/green_offset = -0.000999999
shader_parameter/blue_offset = -0.000999999
shader_parameter/color_boost = 2.8
shader_parameter/color_ghost = 0.05
shader_parameter/scanline_strength = 0.5
shader_parameter/scanline_speed = 2.5
shader_parameter/pixel_flutter = 0.005
shader_parameter/pixel_noise = 0.0017
shader_parameter/vignette_strength = 0.3

[sub_resource type="Animation" id="Animation_joxbp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_s1lqb"]
resource_name = "fade"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pcqce"]
_data = {
"RESET": SubResource("Animation_joxbp"),
"fade": SubResource("Animation_s1lqb")
}

[node name="Title" type="Node2D"]
script = ExtResource("1_w4y26")
next_scene = ExtResource("2_625pm")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_hwndt")
offset_right = 1920.0
offset_bottom = 1072.0

[node name="BG" type="ColorRect" parent="."]
offset_left = -5183.0
offset_top = -7914.0
offset_right = 11319.0
offset_bottom = 3716.0
color = Color(0, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 10
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0)
metadata/_edit_lock_ = true

[node name="Fade" type="AnimationPlayer" parent="ColorRect"]
libraries = {
"": SubResource("AnimationLibrary_pcqce")
}
autoplay = "fade"

[node name="Charging" parent="." instance=ExtResource("1_l7t26")]
visible = false

[node name="UI1" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 44.0
offset_right = 1920.0
offset_bottom = 1124.0

[node name="Label" type="Label" parent="UI1"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -340.0
offset_top = -42.0
offset_right = 340.0
offset_bottom = 224.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_1w5fl")
theme_override_font_sizes/font_size = 200
text = "CALIC0"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="Label2" type="Label" parent="UI1"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -340.0
offset_top = 180.0
offset_right = 340.0
offset_bottom = 207.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_1w5fl")
theme_override_font_sizes/font_size = 50
text = "(Beta 1)"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="IP" type="LineEdit" parent="UI1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.5
offset_top = -86.0
offset_right = 240.5
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
theme_override_fonts/font = ExtResource("2_1w5fl")
theme_override_font_sizes/font_size = 30
placeholder_text = "Enter IP Address"
alignment = 1
virtual_keyboard_type = 2
flat = true
caret_blink = true
caret_blink_interval = 0.6
metadata/_edit_lock_ = true

[node name="Name" type="LineEdit" parent="UI1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.5
offset_top = -28.0
offset_right = 240.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
theme_override_fonts/font = ExtResource("2_1w5fl")
theme_override_font_sizes/font_size = 30
placeholder_text = "Enter Username"
alignment = 1
virtual_keyboard_type = 2
flat = true
caret_blink = true
caret_blink_interval = 0.6
metadata/_edit_lock_ = true

[node name="Play" type="Button" parent="UI1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.5
offset_top = 29.5
offset_right = 67.5
offset_bottom = 104.5
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
theme_override_fonts/font = ExtResource("2_1w5fl")
theme_override_font_sizes/font_size = 50
text = "PLAY"
metadata/_edit_lock_ = true

[node name="Host" type="Button" parent="UI1"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.5
offset_top = 160.0
offset_right = 67.5
offset_bottom = 235.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
theme_override_fonts/font = ExtResource("2_1w5fl")
theme_override_font_sizes/font_size = 50
text = "HOST"
metadata/_edit_lock_ = true

[connection signal="text_changed" from="UI1/IP" to="." method="_on_ip_text_changed"]
[connection signal="text_changed" from="UI1/Name" to="." method="_on_name_text_changed"]
[connection signal="pressed" from="UI1/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="UI1/Host" to="." method="_on_host_pressed"]
